--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas-confetti": "^1.4.0",
     "next": "12.0.9",
     "react": "17.0.2",
+    "react-canvas-confetti": "^1.4.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
